--- a/src/components/ChartBody/ChartBody.module.css
+++ b/src/components/ChartBody/ChartBody.module.css
@@ -107,6 +107,8 @@
   .card-chart-inner .amount {
     font-size: 0.7rem;
     left: -0.3rem;
+    top: -2.8rem;
+    padding: 0.35rem;
   }
 
   .card-chart-inner .card-chart-bar {
